infra/kubernetes/base/quantumpulse/api-deployment.yaml
# kubernetes/base/quantumpulse/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantumpulse-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantumpulse-api
  template:
    metadata:
      labels:
        app: quantumpulse-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
    spec:
      containers:
      - name: quantumpulse-api
        image: 192.168.67.2:5000/quantumpulse-api:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
